# hackmos-2024

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
artifacts/: checksums.txt  cw_dao.wasm  cw_dao_token.wasm  cw_property.wasm  cw_registry.wasm
contracts/cw-dao/: Cargo.toml
contracts/cw-dao-token/: Cargo.toml
contracts/cw-dao-token/src/: contract.rs
contracts/cw-dao/src/: assert.rs  contract.rs  error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  query.rs  reply.rs  state.rs
contracts/cw-dao/ts/: CwDao.client.ts  CwDao.types.ts  CwProperty.client.ts
contracts/cw-property/: Cargo.toml
contracts/cw-property/src/: contract.rs  error.rs  execute.rs  msg.rs  query.rs  state.rs
contracts/cw-property/ts/: CwProperty.client.ts  CwProperty.types.ts
contracts/cw-registry/: Cargo.toml
contracts/cw-registry/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  reply.rs  state.rs
documentation/: faq.md
kyc/contracts/: Cargo.toml  README.md
kyc/contracts/contracts/tokify-kyc/: Cargo.toml
ui/: package-lock.json  package.json  tailwind.config.ts
ui/src/components/CreateTrust/: index.tsx
ui/src/components/Form/: index.tsx
ui/src/components/ListProperty/: index.tsx
ui/src/components/Navbar/: index.tsx
ui/src/components/Progress/: index.tsx
ui/src/components/TokenizedCard/: index.tsx
ui/src/components/TokenizedTrustCard/: index.tsx
ui/src/config/mantrachaintestnet2/: assetlist.json  assetlist.ts  chain.json  chain.ts
ui/src/hooks/: use-toast.ts
ui/src/pages/: _app.tsx  index.tsx
ui/src/pages/api/: getAssets.ts  getTrusts.ts  listAsset.ts  mango.ts
(+13 files in other folders)
