[workspace]
members = ["contracts/*", "packages/*"]

[profile.release.package.cw-dao]
codegen-units = 1
incremental = false

[profile.release.package.cw-dao-token]
codegen-units = 1
incremental = false

[profile.release.package.cw-property]
codegen-units = 1
incremental = false

[profile.release.package.cw-registry]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
